--- a/config/database.yml
+++ b/config/database.yml
@@ -12,16 +12,16 @@ default: &default
 
 development:
   <<: *default
-  database: db/development_postgresql
+  database: db/sample_app_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test_postgresql
+  database: db/sample_app_test
 
 production:
   <<: *default
-  database: db/production_postgresql
+  database: db/sample_app_production
 
